--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
     "react-scripts": "^2.1.3",
+    "sweetalert2": "^11.4.35",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
