changes to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Ishan-Wijesingha99.github.io/React-Portfolio-Ishan-Wijesingha",
+  "homepage": "http://ishan-wijesingha99.github.io/React-Portfolio-Ishan-Wijesingha",
   "name": "solo-project-1",
   "version": "0.1.0",
   "private": true,
